[package]
name = "stickam-bounty"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.0"
bevy_framepace = "0.20.0"
avian2d = "0.4.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
